<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <!-- WaveformView -->

    <com.scarette.mwfonofonemodel.EditableWaveformView
        android:id="@+id/waveformview"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="1dp"
        app:backgroundColor="@color/colorPrimaryExtraLight"
        app:selectionColor="@color/default_selection"
        app:waveformColor="@color/default_waveform"
        app:waveformFillColor="@color/default_waveformFill"
        app:waveformRecordColor="@color/default_record_waveform"

        app:mode="PLAYBACK"/>

    <!-- cursorVIew -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/readP_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="readPointerPos: "
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/readP_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


    <!-- sample selection -->

    <LinearLayout
        android:id="@+id/DriverSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal"
        >
        <Spinner
            android:id="@+id/SampleSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:entries="@array/samples"
            />

        <Button
            android:id="@+id/PlayPauseButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:foreground="@drawable/ic_session_tab_play_statelist_24px"
            android:foregroundGravity="clip_horizontal|center"
            android:soundEffectsEnabled="false"/>

        <Button
            android:id="@+id/piqueButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:foreground="@drawable/pique_statelist_24"
            android:foregroundGravity="clip_horizontal|center"
            android:soundEffectsEnabled="false"/>

        <Button
            android:id="@+id/direction_button"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_forward"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="bold"
            android:soundEffectsEnabled="false"/>

        <Button
            android:id="@+id/loop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loop_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_color_statelist"
            android:textStyle="bold"
            android:soundEffectsEnabled="false"/>

    </LinearLayout>

    <!-- sample start -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar android:id="@+id/sample_start"
            android:progress="0"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            style="@android:style/Widget.SeekBar"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dip"
            android:text="@string/sample_start" />
    </LinearLayout>

    <!-- sample end  -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar android:id="@+id/sample_end"
            android:progress="100"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            style="@android:style/Widget.SeekBar"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dip"
            android:text="@string/sample_end" />
    </LinearLayout>

    <!-- speed -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar android:id="@+id/speed"
            android:progress="50"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            style="@android:style/Widget.SeekBar"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dip"
            android:text="@string/speed" />
    </LinearLayout>

    <!-- filter cutoff -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar android:id="@+id/FilterCutoffSlider"
            android:progress="50"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            style="@android:style/Widget.SeekBar"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dip"
            android:text="@string/filter_cutoff" />
    </LinearLayout>


    <!-- filter q -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar android:id="@+id/FilterQ"
            android:progress="0"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            style="@android:style/Widget.SeekBar"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dip"
            android:text="@string/filter_q" />
    </LinearLayout>

    <!-- reverb -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/reverb"
            style="@android:style/Widget.SeekBar"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:progress="0" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/reverb_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:soundEffectsEnabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dip"
            android:text="@string/reverb" />

    </LinearLayout>

    <!-- metronome -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/metronome"
            style="@android:style/Widget.SeekBar"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:progress="20" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/metronome_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:soundEffectsEnabled="false"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dip"
            android:text="@string/metronome" />
    </LinearLayout>

    <!-- output volume -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar android:id="@+id/VolumeSlider"
            android:progress="70"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            style="@android:style/Widget.SeekBar"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dip"
            android:text="@string/slider_volume" />
    </LinearLayout>

    <Button
        android:id="@+id/oneshot_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OneShot Trigger" />

    <Button
        android:id="@+id/oneshot_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OneShot Stop All" />

</LinearLayout>